# tbp.ultrasound_perception

./: README.md  VisualizeModels.ipynb  debug_transforms.py  environment.yml  pyproject.toml  run.py
benchmark_results/: real2real_dense_learning__sparse_inference.csv  sim2real__dense_inference.csv  sim2real__sparse_inference.csv
configs/: config_utils.py  robot_lab_experiments.py  ultrasound_experiments.py
configs/tbp_monty_pre_hydra_configs/: __init__.py  defaults.py  monty_world_experiments.py  monty_world_habitat_experiments.py  names.py  pretraining_experiments.py  ycb_experiments.py
custom_classes/: How_Monty_is_Customized.md  dataloader.py  environment.py  experiment.py  probe_triggered_environment.py  sensor_module.py
scripts/htc_vive/: README.md  server.py
scripts/ipad_app/ButterflyImagingKitExample/: Model.swift
scripts/visualize_probe/: server.py
